fixed undo/redo, added ID for shapes, use LinkedHashMap